# protobuf_generate_qt

./: CMakeLists.txt  README.md  protobuf_generate_qt.cmake
object_model/: .gitignore  CMakeLists.txt
object_model/include/gui/object_model/: abstract_comparator.h  abstract_filter.h  abstract_filter_comparator_base.h  abstract_object_model.h  abstract_settings.h  comparator.h  comparator_group.h  comparison_filter.h  dynamic_roles.h  enumeration_filter.h  filter_group.h  model_access.h  model_iterator.h  model_value.h  null_object_filter.h  object_list_comparator.h  object_meta_data.h  object_model.h  object_model.h~RF29b144fe.TMP  object_model_map_wrapper.h  object_model_qml.h  object_model_vector_wrapper.h  object_model_wrapper.h  property_binder.h  property_change_listener.h  range_filter.h  regular_expression_filter.h  roles.h  settings.h  signal_binder.h  signal_timer.h  sort_filter_proxy_model.h  value_list_comparator.h
object_model/src/: abstract_comparator.cpp  abstract_filter.cpp  abstract_filter_comparator_base.cpp  abstract_object_model.cpp  abstract_object_model_meta_data.cpp  abstract_object_model_meta_data.h  abstract_settings.cpp  comparator.cpp  comparator_group.cpp  comparison_filter.cpp  dynamic_roles.cpp  enumeration_filter.cpp  filter_group.cpp  model_value.cpp  null_object_filter.cpp  object_list_comparator.cpp  object_meta_data.cpp  object_model.cpp  property_binder.cpp  property_change_listener.cpp  range_filter.cpp  regular_expression_filter.cpp  settings.cpp  signal_binder.cpp  signal_timer.cpp  sort_filter_proxy_model.cpp  value_list_comparator.cpp
object_model/test/: CMakeLists.txt  main.cpp  object_model_test.cpp  sort_filter_test.cpp  test_object.h
object_model/test_package/: CMakeLists.txt  conanfile.py  main.cpp  test_object.h
python/: case_converter.py  proto_generator.py  proto_generator_printer.py  proto_parser.py  protobuf_generate_qt.py  protobuf_generate_qt_common_types.py  well_known_types.proto
python/templates/: model_class_template.cpp  model_class_template.h  object_class_template.cpp  object_class_template.h  object_model_class_template.cpp  object_model_class_template.h
test/: CMakeLists.txt  data_test.h  generated_ip_endpoint_model.cpp  generated_ip_endpoint_object.cpp  generated_test_enum_model.cpp  generated_test_object.cpp  qt_core_test.cpp  qt_core_test.h
test/proto/: CMakeLists.txt  common.proto  named_package.proto  nested.proto  test.proto
test_package/: CMakeLists.txt  filesystemqml.cpp  filesystemqml.h  main.cpp  main.qrc  qtquickcontrols2.conf
test_package/proto/: CMakeLists.txt  test.proto
test_package/qml/: OneOfInput.qml  OptionalInput.qml  RepeatedTable.qml  SingleInput.qml  TableAddItem.qml  TestWindow.qml
